NIFI-13787: Fixed the error handling of ConsumeKafka. Eliminated unnecessary connection pooling at the service layer so that a single Consumer is made available to the processor. This allows the processor to rollback offsets, etc. and provides a simpler API.